syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/legobrokkori/go-kubernetes-grpc_practice/pd";

message CreateUserRequest {
  string user_name = 1;
  string password = 2;
  string full_name = 3;
  string email = 4;
}

message CreateUserResponse {
  User user = 1;
}
